--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="https://drive.google.com/open?id=0B1n7z3EFmKhhODNFaFVxampDWDQ" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="goalie2.jpg" alt="goalie2" style="width:100%;min-height:350px;max-height:600px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
     <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">JOIN or TRYOUT</button>
   </div>
@@ -141,7 +141,7 @@
   <div class="w3-container">
   <h3>Who are we?</h3>
   <!--<h4>Trade</h4>-->
-  <p>Blablabla
+  <p>Text
   </p>
 
   </div>
@@ -154,10 +154,7 @@
   <div class="w3-container">
   <h3>What is Floorball?</h3>
   
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <p>Text</p>
   </div>
   </div>
 </div>
@@ -170,10 +167,7 @@
   <ul>
   	<li>Endurance</li>
   </ul>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <p>Text</p>
   </div>
   </div>
 </div>
