--- a/index.html
+++ b/index.html
@@ -6,9 +6,104 @@
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<body id="myPage">
+<style>
+#imageContainer {
+    background-color: #333;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    border: 2px #333 solid;
+}
 
-<!-- Side Navigation on click 
+#imageContainer img {
+    animation: kenburns 20s infinite;
+}
+
+@keyframes kenburns {
+    0% {
+        opacity: 0;
+    }
+    5% {
+        opacity: 1;
+    }
+    95% {
+        transform: scale3d(1.5, 1.5, 1.5) translate3d(-150px, -120px, 0px);
+        animation-timing-function: ease-in;
+        opacity: 1;
+    }
+    100% {
+        transform: scale3d(2, 2, 2) translate3d(-130px, -100px, 0px);
+        opacity: 0;
+    }
+}
+
+@keyframes slidy {
+    0% {
+        left: 0%;
+    }
+    20% {
+        left: 0%;
+    }
+    25% {
+        left: -100%;
+    }
+    45% {
+        left: -100%;
+    }
+    50% {
+        left: -200%;
+    }
+    70% {
+        left: -200%;
+    }
+    75% {
+        left: -300%;
+    }
+    95% {
+        left: -300%;
+    }
+    100% {
+        left: -400%;
+    }
+}
+
+body {
+    margin: 0;
+    background: #191919 url(images/bg.jpg) top center no-repeat;
+    background-size: 100% auto;
+    text-align: center;
+}
+
+#page-wrap {
+    text-align: left;
+    width: 800px;
+    margin: 0 auto;
+}
+
+div#slider {
+    overflow: hidden;
+}
+
+div#slider figure img {
+    width: 20%;
+    float: left;
+    height: 500px;
+}
+
+div#slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    text-align: left;
+    font-size: 0;
+    animation: 30s slidy infinite;
+}
+</style>
+
+<body id="myPage">
+    <div id="page-wrap">
+        <!-- Side Navigation on click 
 <nav class="w3-sidenav w3-white w3-card-2 w3-animate-left" style="display:none;z-index:2" id="mySidenav">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-xxxlarge w3-text-teal">Close
     <i class="fa fa-remove"></i>
@@ -20,8 +115,7 @@
   <a href="#">Link 5</a>
 </nav>
 -->
-
-<!-- Navbar 
+        <!-- Navbar 
 <div class="w3-top">
  <ul class="w3-navbar w3-theme-d2 w3-left-align">
   <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
@@ -43,7 +137,7 @@
   <li class="w3-hide-small w3-right"><a href="#" class="w3-hover-teal" title="Search"><i class="fa fa-search"></i></a></li>
  </ul>
 -->
-  <!-- Navbar on small screens 
+        <!-- Navbar on small screens 
   <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
     <ul class="w3-navbar w3-left-align w3-theme">
       <li><a href="#team">Team</a></li>
@@ -63,31 +157,38 @@
   </div>
 </div>
 -->
-
-<!-- Image Header -->
-<div class="w3-display-container w3-animate-opacity">
-  <img src="images/goalie2.jpg" alt="goalie2" style="width:100%;min-height:350px;max-height:600px;">
-  <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
-    <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn w3-xlarge w3-theme w3-hover-teal" title="Joinortryout">JOIN or TRYOUT</button>
-  </div>
-</div>
-
-<!-- Modal -->
-<div id="id01" class="w3-modal">
-  <div class="w3-modal-content w3-card-8 w3-animate-top">
-    <header class="w3-container w3-teal"> 
-      <span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn"><i class="fa fa-remove"></i></span>
-      <h4>We welcome new players to our team!</h4>
-      <h5>If you would like some additional information please email us at  renofloorball@gmail.com </h5>
-    </header>
-    
-    <footer class="w3-container w3-teal">
-      <p></p>
-    </footer>
-  </div>
-</div>
-
-<!-- Team Container 
+        <!-- Image Header -->
+        <div class="w3-display-container w3-animate-opacity">
+            <div id="imageContainerX">
+                <div id="slider">
+                    <figure>
+                        <!-- style="width:100%;min-height:350px;max-height:600px;" -->
+                        <img src="images/goalie2.jpg" alt>
+                        <img src="images/windedwarriorbanner.jpg" alt>
+                        <img src="images/floorballSinglePlayerAction2.jpg" alt>
+                        <img src="images/goalie1.jpg" alt>
+                        <img src="images/goalfloorball.jpg" alt>
+                    </figure>
+                    <div class="w3-container w3-display-bottomleft w3-margin-bottom">
+                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn w3-xlarge w3-theme w3-hover-teal" title="Joinortryout">JOIN US!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal -->
+        <div id="id01" class="w3-modal">
+            <div class="w3-modal-content w3-card-8 w3-animate-top">
+                <header class="w3-container w3-teal">
+                    <span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn"><i class="fa fa-remove"></i></span>
+                    <h4>We welcome new players to our team!</h4>
+                    <h5>If you would like some additional information please email us at  renofloorball@gmail.com </h5>
+                </header>
+                <footer class="w3-container w3-teal">
+                    <p></p>
+                </footer>
+            </div>
+        </div>
+        <!-- Team Container 
 <div class="w3-container w3-padding-64 w3-center" id="team">
 <h2>OUR TEAM</h2>
 <p>Meet the team - our office rats:</p>
@@ -121,76 +222,64 @@
 </div>
 </div>
 -->
-
-<!-- Work Row -->
-<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
-
-<!--
+        <!-- Work Row -->
+        <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
+            <!--
 <div class="w3-third">
 <h2>Our Work</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 -->
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="images/windedwarriorbanner.jpg" alt="Winded Warriors" style="width:100%">
-  <div class="w3-container">
-  <h3>Who are we?</h3>
-  <!--<h4>Trade</h4>-->
-  <p>We are group of sport enthusiasts that come together on a regular basis to play Floorball. The game allows a fun and exciting way 
-  to exercise and promote better health. 
-  </p>
-  <p>Since we started our team we've enjoyed all the benefits of this great sport and continue to encourage others to join us as well.
-  </p>
-  <p>&nbsp;</p>
-   <p>&nbsp;</p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="images/floorballSinglePlayerAction1.jpg" alt="Player" style="width:100%">
-  <div class="w3-container">
-  <h3>What is Floorball?</h3>
-  <p>Fast paced, safe and low-cost</p>
-  <p>Like indoor hockey but played with light-weight fiberglass or carbon fibre sticks</p>
-  <p>Played in many countries around the world</p>
-  <p>Rapidly growing and focus is on speed and skill</p>
-  <p>Contender as an Olympic </p>
-   <p>&nbsp;</p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="images/floorballbenefit.jpg" alt="Benfits" style="width:100%">
-  <div class="w3-container">
-  <h3>Benefits of Floorball</h3>
-  <p>Exciting sport for all age groups</p>
-  <p>Physically builds endurance, strength and agility</p>
-  <p>Low cost and easy to learn</p>
-  <p>Promotes great social camaraderie</p>
-   <p>&nbsp;</p>
-    <p>&nbsp;</p>
-     <p>&nbsp;</p>
-  </div>
-  </div>
-</div>
-
-</div>
-
-<!-- Container 
+            <div class="w3-third">
+                <div class="w3-card-2 w3-white">
+                    <img src="images/windedwarriorbanner.jpg" alt="Winded Warriors" style="width:100%">
+                    <div class="w3-container">
+                        <h3>Who are we?</h3>
+                        <!--<h4>Trade</h4>-->
+                        <p>We are group of sport enthusiasts that come together on a regular basis to play Floorball. The game allows a fun and exciting way to exercise and promote better health.
+                        </p>
+                        <p>Since we started our team we've enjoyed all the benefits of this great sport and continue to encourage others to join us as well.
+                        </p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-third">
+                <div class="w3-card-2 w3-white">
+                    <img src="images/floorballSinglePlayerAction1.jpg" alt="Player" style="width:100%">
+                    <div class="w3-container">
+                        <h3>What is Floorball?</h3>
+                        <p>Fast paced, safe and low-cost</p>
+                        <p>Like indoor hockey but played with light-weight fiberglass or carbon fibre sticks</p>
+                        <p>Played in many countries around the world</p>
+                        <p>Rapidly growing and focus is on speed and skill</p>
+                        <p>Contender as an Olympic </p>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-third">
+                <div class="w3-card-2 w3-white">
+                    <img src="images/floorballbenefit.jpg" alt="Benfits" style="width:100%">
+                    <div class="w3-container">
+                        <h3>Benefits of Floorball</h3>
+                        <p>Exciting sport for all age groups</p>
+                        <p>Physically builds endurance, strength and agility</p>
+                        <p>Low cost and easy to learn</p>
+                        <p>Promotes great social camaraderie</p>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Container 
 <div class="w3-container" style="position:relative">
   <a onclick="w3_open()" class="w3-btn-floating-large w3-teal" style="position:absolute;top:-28px;right:24px;z-index:0;">
   <i class="fa fa-plus"></i></a>
 </div>
 -->
-
-
-<!-- Pricing Row 
+        <!-- Pricing Row 
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
     <h2>PRICING</h2>
     <p>Choose a pricing plan that fits your needs.</p><br>
@@ -252,36 +341,28 @@
     </div>
 </div>
 -->
-
-<!-- Contact Container -->
-
-<div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
-  <div class="w3-row">
-    <div class="w3-col m5">
-      <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-
-
-        <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Reno, NV</p>
-
-        <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> renofloorball@gmail.com</p>
-        
-
-      <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Follow Us</span></div>
-         <p>&nbsp</p>
-         <a class="w3-btn-floating w3-teal" href="http://www.facebook.com/groups/renofloorball" title="Facebook"><i class="fa fa-facebook"></i></a>
-        <a class="w3-btn-floating w3-teal" href="#renofloorball" title="Twitter"><i class="fa fa-twitter"></i></a>
-        <a class="w3-btn-floating w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
-
-    </div>
-
-<!-- Side image -->
-<div class="w3-col m7">
-  <div class="w3-container w3-card-4 w3-padding-16 w3-white">
-    <img src="images/goalie2.jpg" alt="goalie2" style="width:100%;min-height:350px;max-height:600px;">
-  </div>
-</div>
-
-<!--
+        <!-- Contact Container -->
+        <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
+            <div class="w3-row">
+                <div class="w3-col m5">
+                    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
+                    <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Reno, NV</p>
+                    <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> renofloorball@gmail.com</p>
+                    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Follow Us</span></div>
+                    <p>&nbsp</p>
+                    <a class="w3-btn-floating w3-teal" href="http://www.facebook.com/groups/renofloorball" title="Facebook"><i class="fa fa-facebook"></i></a>
+                    <a class="w3-btn-floating w3-teal" href="https://twitter.com/intent/tweet?button_hashtag=renofloorball"><i class="fa fa-twitter"></i></a>
+                    <a class="w3-btn-floating w3-teal" href="https://www.instagram.com/renofloorball/?ref=badge" title="instagram"><i class="fa fa-instagram"></i></a>
+                </div>
+                <!-- Side image -->
+                <div class="w3-col m7">
+                    <div class="w3-container w3-card-4 w3-padding-16 w3-white">
+                        <img src="images/goalie2.jpg" alt="goalie2" style="width:100%;min-height:350px;max-height:600px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--
 <script>
 function constructEmailRef() 
 {
@@ -320,73 +401,67 @@ function constructEmailRef()
   </div>
 </div>
 -->
+        <!-- Google Maps -->
+        <div id="googleMap" style="width:100%;height:420px;"></div>
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script>
+        var myCenter = new google.maps.LatLng(39.557847, -119.9909254);
 
+        function initialize() {
+            var mapProp = {
+                center: myCenter,
+                zoom: 7,
+                scrollwheel: false,
+                draggable: false,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
 
-<!-- Google Maps -->
-<div id="googleMap" style="width:100%;height:420px;"></div>
-<script src="https://maps.googleapis.com/maps/api/js"></script>
-<script>
-var myCenter = new google.maps.LatLng(39.557847,-119.9909254);
+            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
 
-function initialize() {
-var mapProp = {
-  center: myCenter,
-  zoom: 7,
-  scrollwheel: false,
-  draggable: false,
-  mapTypeId: google.maps.MapTypeId.ROADMAP
-  };
+            var marker = new google.maps.Marker({
+                position: myCenter,
+            });
 
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+            marker.setMap(map);
+        }
 
-var marker = new google.maps.Marker({
-  position: myCenter,
-});
-
-marker.setMap(map);
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
-  
-
-  <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
-    <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>   
-    <a class="w3-btn w3-theme" href="#myPage"><span class="w3-xlarge">
+        google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+        <!-- Footer -->
+        <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
+            <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
+                <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
+                <a class="w3-btn w3-theme" href="#myPage"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
-  </div>
-</footer>
+            </div>
+        </footer>
+        <script>
+        // Script for side navigation
+        function w3_open() {
+            var x = document.getElementById("mySidenav");
+            x.style.width = "300px";
+            x.style.textAlign = "center";
+            x.style.fontSize = "40px";
+            x.style.paddingTop = "10%";
+            x.style.display = "block";
+        }
 
-<script>
-// Script for side navigation
-function w3_open() {
-    var x = document.getElementById("mySidenav");
-    x.style.width = "300px";
-    x.style.textAlign = "center";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
-}
+        // Close side navigation
+        function w3_close() {
+            document.getElementById("mySidenav").style.display = "none";
+        }
 
-// Close side navigation
-function w3_close() {
-    document.getElementById("mySidenav").style.display = "none";
-}
-
-// Used to toggle the menu on smaller screens when clicking on the menu button
-function openNav() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else { 
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-</script>
-
+        // Used to toggle the menu on smaller screens when clicking on the menu button
+        function openNav() {
+            var x = document.getElementById("navDemo");
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else {
+                x.className = x.className.replace(" w3-show", "");
+            }
+        }
+        </script>
+    </div>
 </body>
-</html>
 
+</html>
