--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <title>Animated Background Headers | Demo 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>Reno Floorball</title>
     <meta name="description" content="" />
     <meta name="keywords" content="reno, floorball, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorball@gmail.com" />
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="dist/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="dist/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="dist/css/component.css" />
-    <link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800|Clicker+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:200,400,800|Clicker+Script' rel='stylesheet' type='text/css'>
     <!--[if IE]>
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -150,6 +150,17 @@ body#video-holder {
 }
 
 </style>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-91393328-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 <body id="myPage">
     <div class="container demo-2">
