--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ body#video-holder {
 }
 
 .content {
-    background: url(images/carbon_fibre.png);
+    background: url(src/www/assets/images/carbon_fibre.png);
 }
 </style>
 <script>
@@ -247,9 +247,9 @@ ga('send', 'pageview');
                                     <video autoplay="" loop="" id="vd_div">
                                         <source src="videos/rfc.mp4"> Your browser does not support this video format.
                                     </video>
-                                    <img src="images/windedwarriorbanner.jpg" alt>
-                                    <img src="images/floorballSinglePlayerAction2.jpg" alt>
-                                    <img src="images/goalie1.jpg" alt>
+                                    <img src="src/www/assets/images/windedwarriorbanner.jpg" alt>
+                                    <img src="src/www/assets/images/floorballSinglePlayerAction2.jpg" alt>
+                                    <img src="src/www/assets/images/goalie1.jpg" alt>
                                     <!--<img src="images/goalfloorball.jpg" alt>-->
                                 </figure>
                                 <div class="w3-container w3-display-bottomleft w3-margin-bottom">
@@ -317,7 +317,7 @@ ga('send', 'pageview');
 -->
                         <div class="w3-third ">
                             <div class="w3-card-2 w3-white roundedcorners ">
-                                <img src="images/windedwarriorbanner.jpg" alt="Winded Warriors" style="width:100%">
+                                <img src="src/www/assets/images/windedwarriorbanner.jpg" alt="Winded Warriors" style="width:100%">
                                 <div class="w3-container">
                                     <h3>Who are we?</h3>
                                     <!--<h4>Trade</h4>-->
@@ -332,7 +332,7 @@ ga('send', 'pageview');
                         </div>
                         <div class="w3-third">
                             <div class="w3-card-2 w3-white roundedcorners">
-                                <img src="images/floorballSinglePlayerAction1.jpg" alt="Player" style="width:100%">
+                                <img src="src/www/assets/images/floorballSinglePlayerAction1.jpg" alt="Player" style="width:100%">
                                 <div class="w3-container">
                                     <h3>What is Floorball?</h3>
                                     <p>Fast paced, safe and low-cost</p>
@@ -346,7 +346,7 @@ ga('send', 'pageview');
                         </div>
                         <div class="w3-third">
                             <div class="w3-card-2 w3-white roundedcorners">
-                                <img src="images/floorballbenefit.jpg" alt="Benfits" style="width:100%">
+                                <img src="src/www/assets/images/floorballbenefit.jpg" alt="Benfits" style="width:100%">
                                 <div class="w3-container">
                                     <h3>Benefits of Floorball</h3>
                                     <p>Exciting sport for all age groups</p>
@@ -464,7 +464,7 @@ ga('send', 'pageview');
                             <!-- Side image -->
                             <div class="w3-col m7">
                                 <div class="w3-container w3-card-4 w3-padding-16 w3-white">
-                                    <img src="images/areyouready.jpg" alt="areyouready" style="width:100%;min-height:300px;max-height:600px;">
+                                    <img src="src/www/assets/images/areyouready.jpg" alt="areyouready" style="width:100%;min-height:300px;max-height:600px;">
                                 </div>
                             </div>
                         </div>
