--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ ga('send', 'pageview');
                                     <!-- style="width:100%;min-height:350px;max-height:600px;" -->
                                     <img src="src/www/assets/images/goalie2.jpg" alt>
                                     <video autoplay="" loop="" id="vd_div">
-                                        <source src="src/www/assets/videos/rfc.mp4"> Your browser does not support this video format.
+                                        <source src="src/www/assets/videos  /rfc.mp4"> Your browser does not support this video format.
                                     </video>
                                     <img src="src/www/assets/images/windedwarriorbanner.jpg" alt>
                                     <img src="src/www/assets/images/floorballSinglePlayerAction2.jpg" alt>
