--- a/src/www/mainOrig.tpl.html
+++ b/src/www/mainOrig.tpl.html
@@ -13,7 +13,7 @@
 
      <script src="https://unpkg.com/popper.js@1.12.5/dist/umd/popper.js" integrity="sha384-KlVcf2tswD0JOTQnzU4uwqXcbAy57PvV48YUiLjqpk/MJ2wExQhg9tuozn5A1iVw" crossorigin="anonymous"></script>
 
-     
+     <link href="//cdn.muicss.com/mui-0.9.27/css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
     <!-- Main stylesheet -->
     <link rel="stylesheet" type="text/css" href="main.css">
     <!-- Bootstrap -->
@@ -34,7 +34,10 @@
 </head>
 
 <body id="mainbody" data-spy="scroll" data-offset="20" data-target="#navbar">
+    <div id="error-root"></div>
+    <div id="modal-root"></div>
     <div id="react-root"></div>
+   
 </body>
 
  
