--- a/drill2.html
+++ b/drill2.html
@@ -3,7 +3,7 @@
   <body>
 
     <h1>
-      Drill
+      Drill 2 - Passing
     </h1>
 
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
