--- a/drill2.html
+++ b/drill2.html
@@ -47,7 +47,7 @@
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
-         event.target.mute();
+         //event.target.mute();
           event.target.seekTo(20,false);
         event.target.playVideo();
        
@@ -62,14 +62,14 @@
        
 
         if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 7400);
+          setTimeout(stopVideo, 74000);
           done = true;
         }
       }
       function stopVideo() {
         player.stopVideo();
         player.seekTo(20,false);
-        setTimeout(stopVideo,7400);
+        setTimeout(stopVideo,74000);
       }
 
     </script>
