--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!--[if IE]>
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+
+    <meta http-equiv="Refresh" content="0; url="http://renofloorball.org/drill2.html"> 
+
 </head>
 <html>
 <title>Reno Floorball</title>
