--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-    <!-- <meta http-equiv="Refresh" content="0; url="http://renofloorball.org/drill2.html">  -->
+    <meta http-equiv="Refresh" content="0; url='http://renofloorball.org/drill2.html'"> 
+
 
 </head>
 <html>
