--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <!-- <meta http-equiv="Refresh" content="0; url='http://renofloorball.org/drill2.html'">  -->
 
-
+ 
 </head>
 <html>
-<title>Reno Floorball</title>
+<title>Reno Floorball Club</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
