--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
+    <meta http-equiv="Refresh" content="0; url='http://renofloorball.org/dist'"> 
    
 </head>
 <html>
