--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="" />
-    <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
+    <meta name="description" content="reno jazz floorball club" />
+    <meta name="keywords" content="reno, floorball, jazz, renojazz, nevada, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorball@gmail.com" />
 
 
