adding meta tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorballClub@gmail.com" />
+	<meta property="og:title" value="Reno Floorball Club" />
 
 
     <link rel="shortcut icon" href="favicon.ico">
