adding og:image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorballClub@gmail.com" />
 	<meta property="og:title" value="Reno Floorball Club" />
+	<meta property="og:image" value="/assets/images/areyouready.jpg" />
 
 
     <link rel="shortcut icon" href="favicon.ico">
