--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="" />
     <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorballClub@gmail.com" />
-	<meta property="og:title" value="Reno Floorball Club" />
-	<meta property="og:image" value="/assets/images/areyouready.jpg" />
+	<meta property="og:title" content="Reno Floorball Club" />
+	<meta property="og:image" content="http://renofloorball.org/assets/images/areyouready.jpg" />
 
 
     <link rel="shortcut icon" href="favicon.ico">
