--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorballClub@gmail.com" />
 	<meta property="og:title" content="Reno Floorball Club" />
-	<meta property="og:image" content="http://renofloorball.org/assets/images/areyouready.jpg" />
+	<meta property="og:video" content="http://renofloorball.org/assets/videos/p2_A.mp4" />
 
 
     <link rel="shortcut icon" href="favicon.ico">
