--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorballClub@gmail.com" />
 	<meta property="og:title" content="Reno Floorball Club" />
+	<meta property="og:type" content="video">
 	<meta property="og:video" content="http://renofloorball.org/assets/videos/p2_A.mp4" />
 
 
