adding og:video

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta property="og:title" content="Reno Floorball Club" />
 	<meta property="og:type" content="video">
 	<meta property="og:video" content="http://renofloorball.org/assets/videos/p2_A.mp4" />
+	<meta property="og:image" content="http://renofloorball.org/assets/images/areyouready.jpg" />
 
 
     <link rel="shortcut icon" href="favicon.ico">
