adding og:video

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="reno, nevada, floorball, jazz, renojazz, innebandy, unihoc, salibandy, hockey, street, roller" />
     <meta name="author" content="RenoFloorballClub@gmail.com" />
 	<meta property="og:title" content="Reno Floorball Club" />
-	<meta property="og:type" content="movie">
+	<meta property="og:type" content="movie" />
+	<meta property="og:video:type" content="video/mp4" />
 	<meta property="og:video" content="http://renofloorball.org/assets/videos/p2_A.mp4" />
 	<meta property="og:image" content="http://renofloorball.org/assets/images/areyouready.jpg" />
 
